// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatBar renders correctly after created conversation 1`] = `
<div>
  <div
    class="chat-bar sticky-top d-flex flex-column pb-4"
  >
    <h4
      class="d-flex justify-content-between align-items-center"
    >
      <span>
        Chat
      </span>
      <button
        class="btn btn-primary btn-sm"
        type="button"
      >
        New chat
      </button>
    </h4>
    <div
      class="chat-conversations d-flex flex-column"
    >
      <a
        class="d-flex align-items-center p-2 chat"
        href="/chat/2"
      >
        <div
          class="d-flex chat-avatars"
        >
          <div
            class="chat-avatar-wrapper"
          >
            <img
              alt="Gravatar for undefined"
              class="react-gravatar rounded-circle"
              height="30"
              src="//www.gravatar.com/avatar/ghi?d=retro&r=g&s=30"
              srcset="//www.gravatar.com/avatar/ghi?d=retro&r=g&s=60 2x"
              width="30"
            />
          </div>
        </div>
        <div
          class="chat-title"
        >
          Jane Smith, Jeremy Peters
        </div>
      </a>
      <a
        class="d-flex align-items-center p-2 chat"
        href="/chat/1"
      >
        <div
          class="d-flex chat-avatars"
        >
          <div
            class="chat-avatar-wrapper"
          >
            <img
              alt="Gravatar for undefined"
              class="react-gravatar rounded-circle"
              height="30"
              src="//www.gravatar.com/avatar/def?d=retro&r=g&s=30"
              srcset="//www.gravatar.com/avatar/def?d=retro&r=g&s=60 2x"
              width="30"
            />
          </div>
        </div>
        <div
          class="chat-title"
        >
          Jane Smith, John Doe
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`ChatBar renders correctly for loaded state 1`] = `
<div>
  <div
    class="chat-bar sticky-top d-flex flex-column pb-4"
  >
    <h4
      class="d-flex justify-content-between align-items-center"
    >
      <span>
        Chat
      </span>
      <button
        class="btn btn-primary btn-sm"
        type="button"
      >
        New chat
      </button>
    </h4>
    <div
      class="chat-conversations d-flex flex-column"
    >
      <a
        class="d-flex align-items-center p-2 chat"
        href="/chat/1"
      >
        <div
          class="d-flex chat-avatars"
        >
          <div
            class="chat-avatar-wrapper"
          >
            <img
              alt="Gravatar for undefined"
              class="react-gravatar rounded-circle"
              height="30"
              src="//www.gravatar.com/avatar/def?d=retro&r=g&s=30"
              srcset="//www.gravatar.com/avatar/def?d=retro&r=g&s=60 2x"
              width="30"
            />
          </div>
        </div>
        <div
          class="chat-title"
        >
          Jane Smith, John Doe
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`ChatBar renders correctly for loading state 1`] = `
<div>
  <div
    class="chat-bar sticky-top d-flex flex-column pb-4"
  >
    <h4
      class="d-flex justify-content-between align-items-center"
    >
      <span>
        Chat
      </span>
      <button
        class="btn btn-primary btn-sm"
        type="button"
      >
        New chat
      </button>
    </h4>
    <div
      class="chat-conversations d-flex flex-column"
    >
      <div
        class="d-flex justify-content-center"
      >
        <div
          class="spinner-border"
          role="status"
        >
          <span
            class="sr-only"
          >
            Loading...
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ChatBar renders correctly for new chat state 1`] = `
<div>
  <div
    class="chat-bar sticky-top d-flex flex-column pb-4"
  >
    <h4
      class="d-flex justify-content-between align-items-center"
    >
      <span>
        New chat
      </span>
    </h4>
    <div
      class="chat-conversations d-flex flex-column"
    >
      <div
        class="d-flex justify-content-center"
      >
        <div
          class="spinner-border"
          role="status"
        >
          <span
            class="sr-only"
          >
            Loading...
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ChatBar renders correctly when unauthenticated 1`] = `
<div>
  <div
    class="p-2 empty-state"
  >
    <h4>
      Chat
    </h4>
    <p>
      <a
        href="/login"
      >
        Log in
      </a>
       to chat
    </p>
  </div>
</div>
`;
